fix horizontal overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,8 +396,10 @@ html {
 /**
  * Remove the margin in all browsers.
  */
-body {
+html,body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /* Grouping content
